fix: overlap tooltip bottom arrow

--- a/src/toolbar/Toolbar.scss
+++ b/src/toolbar/Toolbar.scss
@@ -4,5 +4,10 @@
   
   .ToolbarButton {
     margin: 8px 4px;
+    
+    &>.__react_component_tooltip::before {
+      // Avoid overlap with the bottom arrow
+      z-index: -1;
+    }
   }
 }
